# python-libzim

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  MANIFEST.in  Pipfile  README.md  README.rst  docker-compose.yml  mkdocs.yml  pyproject.toml  rebuild.sh  requirements-dev.txt  run_tests.sh  setup.cfg  setup.py  tasks.py
.github/workflows/: CI-wheels.yaml  Publish.yaml  QA.yaml  Tests.yaml  release.yaml  release.yml  test.yml  wheels.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  changelog.md  index.md  license.md
docs/scripts/: generate_api_nav.py
examples/: basic.py  basic_writer.py
include/: README.md
lib/: README.md
libzim/: __init__.py  __init__.pyi  examples.py  illustration.pyi  lib.cxx  lib.h  libwrapper.cpp  libwrapper.h  libzim.cpp  libzim.h  libzim.pxd  libzim.pyx  libzim_api.h  libzim_wrapper.pxd  libzim_wrapper.pyx  pyzim.cpp  pyzim.pyx  reader.py  reader.pyi  search.pyi  searcher.py  suggestion.pyi  version.pyi  wrapper.pxd  wrapper.pyx  wrappers.cpp  writer.py  writer.pyi  zim.pxd
pyzim/: examples.py  lib.cxx  lib.h  pyzim.cpp  pyzim.h  pyzim.pxd  pyzim.pyx  pyzim_api.h  wrappers.cpp  zim_wrapper.pxd
tests/: conftest.py  test.py  test_illustration_archive.py  test_illustration_info.py  test_libzim.py  test_libzim_creator.py  test_libzim_file_reader.py  test_libzim_reader.py  test_libzim_version.py  test_pyzim.py
