[metadata]
name = libzim
version = 1.0.0
url = https://github.com/openzim/python-libzim
project_urls =
  Donate = https://www.kiwix.org/en/support-us/
description = A python-facing API for creating and interacting with ZIM files
author = Monadical Inc.
author_email = jdc@monadical.com
maintainer = Openzim team
maintainer_email = contact@openzim.org
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving :: Mirroring
    Topic :: System :: Archiving :: Backup
    Intended Audience :: Developers
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    #Typing :: Typed
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
include_package_data = True
zim_safe = False
packages =
    libzim
python_requires =
    >=3.6
setup_requires =
    cython
test_requires =
    pytest

[isort]
profile = black

[flake8]
max-line-length = 88
